correcting layout spacing

--- a/src/app/gh-search/gh-search.component.scss
+++ b/src/app/gh-search/gh-search.component.scss
@@ -10,6 +10,14 @@
   margin: 0;
 
   .title {
-    margin-top: 0;
+    margin: 0 auto .5em;
+  }
+
+  .search {
+    width: 50%;
+    height: 2em;
+    margin: 0;
+    outline: $header-color;
+    border-radius: 4px;
   }
 }
